<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".contactDetailScreen.ContactDetailActivity">


    <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_name_label"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/detail_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_surname_label"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/detail_surname_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_age_label"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/detail_age_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_occupation_label"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/detail_occupation_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_dni_label"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/detail_dni_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp"
            android:text="@string/creation_cv_label"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/detail_cv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp" />

</LinearLayout>