<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".contactCreationScreen.ContactCreationActivity">


    <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_name_label"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/creation_name_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="text" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_surname_label"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/creation_surname_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="text" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_age_label"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/creation_age_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="number" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_occupation_label"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/creation_occupation_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="text" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/creation_dni_label"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/creation_dni_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="text" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creation_cv_label"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/creation_cv_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/creation_rating_label"
                android:textStyle="bold" />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/creation_star_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/white"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/btn_star_big_on" />

            <ImageButton
                    android:id="@+id/creation_star_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/white"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/btn_star_big_on" />

            <ImageButton
                    android:id="@+id/creation_star_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/white"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/btn_star_big_on" />

            <ImageButton
                    android:id="@+id/creation_star_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/white"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/btn_star_big_on" />

            <ImageButton
                    android:id="@+id/creation_star_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/white"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/btn_star_big_on" />

            <TextView
                    android:id="@+id/creation_rating_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>